// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messages.tsx snapshots > empty inbox — headline, filter-less, first-run EmptyState 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "width": 24,
        }
      }
    />
    <Text
      style={
        [
          {
            "fontFamily": "Fraunces_600SemiBold",
            "fontSize": 27,
            "letterSpacing": -0.3,
            "lineHeight": 31.049999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Messages
    </Text>
    <View
      style={
        {
          "width": 24,
        }
      }
    />
  </View>
  <SectionList>
    <View
      accessibilityRole="text"
      accessible={true}
      style={
        {
          "alignItems": "center",
          "gap": 8,
          "padding": 20,
        }
      }
    >
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8C8674"
          importantForAccessibility="no-hide-descendants"
          name="chatbubble-ellipses-outline"
          size={32}
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 28.799999999999997,
            },
            {
              "color": "#26333A",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        Vos trajets, au même endroit.
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            {
              "color": "#7A8288",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "marginBottom": 4,
            },
          ]
        }
      >
        Retrouvez ici les conversations liées à vos trajets partagés — avant, pendant et après le départ.
      </Text>
      <Pressable
        accessibilityLabel="Trouver un trajet"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "disabled": false,
          }
        }
        disabled={false}
        onPress={[Function]}
        style={[Function]}
      >
        <Text
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#2E3B42",
              },
            ]
          }
        >
          Trouver un trajet
        </Text>
      </Pressable>
    </View>
  </SectionList>
</SafeAreaView>
`;

exports[`messages.tsx snapshots > error — full-screen retry EmptyState 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    accessibilityRole="text"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "padding": 20,
      }
    }
  >
    <View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#8C8674"
        importantForAccessibility="no-hide-descendants"
        name="cloud-offline-outline"
        size={32}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "600",
            "lineHeight": 28.799999999999997,
          },
          {
            "color": "#26333A",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          {
            "marginTop": 4,
          },
        ]
      }
    >
      Impossible de charger vos messages
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#7A8288",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          {
            "marginBottom": 4,
          },
        ]
      }
    >
      Vérifiez votre connexion puis réessayez.
    </Text>
    <Pressable
      accessibilityLabel="Réessayer"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": false,
        }
      }
      disabled={false}
      onPress={[Function]}
      style={[Function]}
    >
      <Text
        style={
          [
            {
              "fontWeight": "600",
            },
            {
              "fontSize": 16,
            },
            {
              "color": "#2E3B42",
            },
          ]
        }
      >
        Réessayer
      </Text>
    </Pressable>
  </View>
</SafeAreaView>
`;

exports[`messages.tsx snapshots > loading — headline over conversation-row skeletons 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "width": 24,
        }
      }
    />
    <Text
      style={
        [
          {
            "fontFamily": "Fraunces_600SemiBold",
            "fontSize": 27,
            "letterSpacing": -0.3,
            "lineHeight": 31.049999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Messages
    </Text>
    <View
      style={
        {
          "width": 24,
        }
      }
    />
  </View>
  <View
    style={
      {
        "gap": 16,
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 9999,
              "height": 48,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": 48,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          {
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 8.4,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "55%",
              },
              undefined,
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 7.199999999999999,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "80%",
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 9999,
              "height": 48,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": 48,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          {
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 8.4,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "55%",
              },
              undefined,
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 7.199999999999999,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "80%",
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 9999,
              "height": 48,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": 48,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          {
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 8.4,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "55%",
              },
              undefined,
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 7.199999999999999,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "80%",
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 9999,
              "height": 48,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": 48,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          {
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 8.4,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "55%",
              },
              undefined,
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 7.199999999999999,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "80%",
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</SafeAreaView>
`;

exports[`messages.tsx snapshots > populated — filter chips over Aujourd'hui/Hier day sections 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "width": 24,
        }
      }
    />
    <Text
      style={
        [
          {
            "fontFamily": "Fraunces_600SemiBold",
            "fontSize": 27,
            "letterSpacing": -0.3,
            "lineHeight": 31.049999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Messages
    </Text>
    <View
      style={
        {
          "width": 24,
        }
      }
    />
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 4,
        "paddingBottom": 8,
        "paddingHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Tous"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": true,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2E9E6C",
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#0D1512",
            },
          ]
        }
      >
        Tous
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="À venir"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2E9E6C",
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#0D1512",
            },
          ]
        }
      >
        À venir
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="En cours"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2E9E6C",
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#0D1512",
            },
          ]
        }
      >
        En cours
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="Passés"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2E9E6C",
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#0D1512",
            },
          ]
        }
      >
        Passés
      </Text>
    </TouchableOpacity>
  </View>
  <SectionList>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 21,
          },
          {
            "color": "#8C8674",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "paddingBottom": 4,
            "paddingTop": 12,
          },
        ]
      }
    >
      Aujourd'hui
    </Text>
    <TouchableOpacity
      accessibilityLabel="Conversation avec Amine Ben Salah, Tunis vers Sousse"
      accessibilityRole="button"
      activeOpacity={0.7}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Amine Ben Salah"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#2E3B42",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontWeight": "600",
                },
                {
                  "color": undefined,
                  "fontSize": 19,
                },
              ]
            }
          >
            AB
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9,
                "borderWidth": 2,
                "bottom": -2,
                "height": 18,
                "justifyContent": "center",
                "position": "absolute",
                "right": -2,
                "width": 18,
              },
              {
                "backgroundColor": "#2E9E6C",
                "borderColor": "#FFFFFF",
              },
            ]
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#0D1512"
            importantForAccessibility="no-hide-descendants"
            name="checkmark"
            size={16}
          />
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "gap": 2,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "flexShrink": 1,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Amine Ben Salah
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#8C8674",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            09:41
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Conducteur · Tunis → Sousse
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Je passe vous prendre devant la station.
        </Text>
      </View>
    </TouchableOpacity>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 21,
          },
          {
            "color": "#8C8674",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "paddingBottom": 4,
            "paddingTop": 12,
          },
        ]
      }
    >
      Hier
    </Text>
    <TouchableOpacity
      accessibilityLabel="Conversation avec Salma Trabelsi, Tunis vers Hammamet"
      accessibilityRole="button"
      activeOpacity={0.7}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingVertical": 8,
          },
          {
            "opacity": 0.6,
          },
        ]
      }
    >
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Salma Trabelsi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#B08A4E",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontWeight": "600",
                },
                {
                  "color": undefined,
                  "fontSize": 19,
                },
              ]
            }
          >
            ST
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "gap": 2,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "flexShrink": 1,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Salma Trabelsi
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#8C8674",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            Hier
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Conducteur · Tunis → Hammamet
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#8C8674",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Conversation terminée.
        </Text>
      </View>
      <Ionicons
        accessibilityElementsHidden={true}
        color="#2E9E6C"
        importantForAccessibility="no-hide-descendants"
        name="checkmark-circle"
        size={20}
      />
    </TouchableOpacity>
  </SectionList>
</SafeAreaView>
`;
